--- a/index.html
+++ b/index.html
@@ -2,60 +2,119 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MyFairTech - IT Solutions</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>MyFairTech - Trusted IT Consulting & Cloud Solutions</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f7fa;
-      color: #333;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0; padding: 0;
+      background: #f4f7f8;
+      color: #222;
+      line-height: 1.6;
     }
     header {
-      background-color: #0078d7;
-      color: white;
-      padding: 2rem;
+      background: #004080;
+      color: #fff;
+      padding: 40px 20px;
       text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.8rem;
+      letter-spacing: 2px;
+    }
+    header p {
+      margin-top: 10px;
+      font-size: 1.2rem;
+      font-weight: 300;
     }
     main {
       max-width: 900px;
-      margin: 2rem auto;
-      background: white;
-      padding: 2rem;
+      margin: 40px auto;
+      background: #fff;
+      padding: 30px 40px;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
     section {
-      margin-bottom: 2rem;
+      margin-bottom: 30px;
     }
-    h1, h2 {
-      margin-top: 0;
+    h2 {
+      color: #004080;
+      border-bottom: 3px solid #0074d9;
+      padding-bottom: 8px;
+      margin-bottom: 15px;
     }
     ul {
-      padding-left: 1.5rem;
+      list-style: none;
+      padding-left: 0;
+    }
+    ul li {
+      padding: 8px 0;
+      border-bottom: 1px solid #e1e8ed;
+      font-weight: 500;
+    }
+    ul li:last-child {
+      border-bottom: none;
+    }
+    a {
+      color: #004080;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    a:hover {
+      text-decoration: underline;
     }
     footer {
       text-align: center;
       font-size: 0.9rem;
-      color: #666;
-      margin: 3rem 0 1rem;
-    }
-    a {
-      color: #0078d7;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
+      padding: 20px;
+      color: #555;
+      background: #f4f7f8;
+      border-top: 1px solid #ddd;
+      margin-top: 50px;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>MyFairTech</h1>
-    <p>Trusted IT Consulting and Cloud Infrastructure Solutions</p>
+    <p>Trusted IT Consulting & Cloud Infrastructure Solutions</p>
   </header>
+
   <main>
     <section>
       <h2>What We Do</h2>
+      <p>We provide comprehensive IT consulting services focused on cloud infrastructure, virtualization, and modern remote access solutions to empower your business.</p>
+    </section>
+
+    <section>
+      <h2>Our Services</h2>
       <ul>
-        <li>Comprehensive IT support and infrastructure des
+        <li>Cloud infrastructure design & management</li>
+        <li>
+          Modernize your legacy applications — bring them to the web in simple steps, no reprogramming needed!<br />
+          <em style="color: #800080; font-weight: 600;">(This is pure Black Magic – as our friend Hernan says!)</em>
+        </li>
+        <li>ZTNA solutions — replace your old VPN workflow and modernize securely</li>
+        <li>Multi-language support: English, Spanish, Italian & Portuguese</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Why Choose Us?</h2>
+      <ul>
+        <li>Years of experience solving complex IT challenges</li>
+        <li>
+          We take your business to the next level! Give it a try, it's free.
+          <a href="https://calendly.com/myfairtech" target="_blank" style="color:#0074d9; font-weight:700; margin-left:8px;">
+            Schedule a POC
+          </a>
+        </li>
+        <li>Client-focused, reliable, and scalable solutions</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Contact Us</
+
