--- a/index.html
+++ b/index.html
@@ -116,5 +116,11 @@
     </section>
 
     <section>
-      <h2>Contact Us</
+  <h2>Contact Us</h2>
+  <p>Have a question, need a solution, or want to modernize your IT infrastructure?</p>
+  <p>📧 Email us at: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
+  <p>📅 Prefer a quick call? <a href="https://calendly.com/myfairtech" target="_blank">Schedule a free consultation here</a></p>
+  <p>We speak English, Spanish, Italian and Portuguese. Reach out — let's solve it together.</p>
+</section>
+
 
