--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       line-height: 1.6;
     }
     header {
-      background: #004080;
+      background: #A8D5BA; /* verde menta suave */
       color: #fff;
       padding: 40px 20px;
       text-align: center;
