--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0; padding: 0;
-      background: #f4f7f8;
+      background: #FAFAFA;
       color: #222;
       line-height: 1.6;
     }
@@ -40,8 +40,8 @@
       margin-bottom: 30px;
     }
     h2 {
-      color: #004080;
-      border-bottom: 3px solid #0074d9;
+      color: #7A5BAE; /* lavanda moderado para títulos */
+      border-bottom: 3px solid #F7C6B6; /* durazno pastel para subrayado */
       padding-bottom: 8px;
       margin-bottom: 15px;
     }
@@ -58,11 +58,12 @@
       border-bottom: none;
     }
     a {
-      color: #004080;
+      color: #7A5BAE; /* lavanda para enlaces */
       text-decoration: none;
       font-weight: 600;
     }
     a:hover {
+      color: #F7C6B6; /* durazno pastel para hover */
       text-decoration: underline;
     }
     footer {
@@ -70,7 +71,7 @@
       font-size: 0.9rem;
       padding: 20px;
       color: #555;
-      background: #f4f7f8;
+      background: #EDEDED; /* gris claro para footer */
       border-top: 1px solid #ddd;
       margin-top: 50px;
     }
@@ -107,7 +108,7 @@
         <li>Years of experience solving complex IT challenges</li>
         <li>
           We take your business to the next level! Give it a try, it's free.
-          <a href="https://calendly.com/myfairtech" target="_blank" style="color:#0074d9; font-weight:700; margin-left:8px;">
+          <a href="https://calendly.com/myfairtech" target="_blank" style="margin-left:8px;">
             Schedule a POC
           </a>
         </li>
@@ -115,7 +116,7 @@
       </ul>
     </section>
 
-     <section>
+    <section>
       <h2>Contact Us</h2>
       <p>Have a question, need a solution, or want to modernize your IT infrastructure?</p>
       <p>📧 Email us at: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
@@ -129,6 +130,3 @@
   </footer>
 </body>
 </html>
-
-
-
