--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0; padding: 0;
-      background: #FAFAFA;
+      background: #f4f7f8;
       color: #222;
       line-height: 1.6;
     }
@@ -40,8 +40,8 @@
       margin-bottom: 30px;
     }
     h2 {
-      color: #7A5BAE; /* lavanda moderado para títulos */
-      border-bottom: 3px solid #F7C6B6; /* durazno pastel para subrayado */
+      color: #7A5BAE; /* lavanda */
+      border-bottom: 3px solid #F7C6B6; /* durazno pastel */
       padding-bottom: 8px;
       margin-bottom: 15px;
     }
@@ -58,12 +58,12 @@
       border-bottom: none;
     }
     a {
-      color: #7A5BAE; /* lavanda para enlaces */
+      color: #7A5BAE;
       text-decoration: none;
       font-weight: 600;
     }
     a:hover {
-      color: #F7C6B6; /* durazno pastel para hover */
+      color: #F7C6B6;
       text-decoration: underline;
     }
     footer {
@@ -71,7 +71,7 @@
       font-size: 0.9rem;
       padding: 20px;
       color: #555;
-      background: #EDEDED; /* gris claro para footer */
+      background: #EDEDED;
       border-top: 1px solid #ddd;
       margin-top: 50px;
     }
@@ -116,7 +116,7 @@
       </ul>
     </section>
 
-    <section>
+     <section>
       <h2>Contact Us</h2>
       <p>Have a question, need a solution, or want to modernize your IT infrastructure?</p>
       <p>📧 Email us at: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
