--- a/index.html
+++ b/index.html
@@ -95,4 +95,38 @@
         <li>Cloud infrastructure design & management</li>
         <li>
           Modernize your legacy applications — bring them to the web in simple steps, no reprogramming needed!<br />
-          <em style=
+          <em style="color: #800080; font-weight: 600;">(This is pure Black Magic – as our friend Hernan says!)</em>
+        </li>
+        <li>ZTNA solutions — replace your old VPN workflow and modernize securely</li>
+        <li>Multi-language support: English, Spanish, Italian & Portuguese</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Why Choose Us?</h2>
+      <ul>
+        <li>Years of experience solving complex IT challenges</li>
+        <li>
+          We take your business to the next level! Give it a try, it's free.
+          <a href="https://calendly.com/myfairtech" target="_blank" style="margin-left:8px;">
+            Schedule a POC
+          </a>
+        </li>
+        <li>Client-focused, reliable, and scalable solutions</li>
+      </ul>
+    </section>
+
+     <section>
+      <h2>Contact Us</h2>
+      <p>Have a question, need a solution, or want to modernize your IT infrastructure?</p>
+      <p>📧 Email us at: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
+      <p>📅 Prefer a quick call? <a href="https://calendly.com/myfairtech" target="_blank">Schedule a free consultation here</a></p>
+      <p>We speak English, Spanish, Italian and Portuguese. Reach out — let's solve it together.</p>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2025 MyFairTech. All rights reserved.
+  </footer>
+</body>
+</html>
