--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MyFairTech - Dynamic Theme Example</title>
-
-  <!-- Tema por defecto: pastel -->
   <link id="theme-style" rel="stylesheet" href="style-pastel.css" />
 </head>
 <body>
@@ -26,22 +24,46 @@
     </section>
 
     <section>
+      <h2>What We Do</h2>
+      <p>We provide comprehensive IT consulting services focused on cloud infrastructure, virtualization, and modern remote access solutions to empower your business.</p>
+    </section>
+
+    <section>
       <h2>Our Services</h2>
       <ul>
-        <li>Cloud Infrastructure</li>
-        <li>ZTNA Solutions</li>
-        <li>Legacy App Modernization</li>
+        <li>Cloud infrastructure design & management</li>
+        <li>
+          Modernize your legacy applications — bring them to the web in simple steps, no reprogramming needed!<br />
+          <em style="color: #800080; font-weight: 600;">(This is pure Black Magic – as our friend Hernan says!)</em>
+        </li>
+        <li>ZTNA solutions — replace your old VPN workflow and modernize securely</li>
+        <li>Multi-language support: English, Spanish, Italian & Portuguese</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Why Choose Us?</h2>
+      <ul>
+        <li>Years of experience solving complex IT challenges</li>
+        <li>
+          We take your business to the next level! Give it a try, it's free.
+          <a href="https://calendly.com/myfairtech" target="_blank" style="margin-left:8px;">Schedule a POC</a>
+        </li>
+        <li>Client-focused, reliable, and scalable solutions</li>
       </ul>
     </section>
 
     <section>
       <h2>Contact Us</h2>
-      <p>Email: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
+      <p>Have a question, need a solution, or want to modernize your IT infrastructure?</p>
+      <p>📧 Email us at: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
+      <p>📅 Prefer a quick call? <a href="https://calendly.com/myfairtech" target="_blank">Schedule a free consultation here</a></p>
+      <p>We speak English, Spanish, Italian and Portuguese. Reach out — let's solve it together.</p>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 MyFairTech
+    &copy; 2025 MyFairTech. All rights reserved.
   </footer>
 
   <script>
