--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MyFairTech - Dynamic Theme Example</title>
-  <link id="theme-style" rel="stylesheet" href="style-pastel.css" />
+  <title>MyFairTech - Soluciones IT</title>
+  <link rel="stylesheet" href="style-pastel.css" />
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -13,111 +13,138 @@
       color: #222;
       line-height: 1.6;
     }
+
     header {
-      background: #b996e3; /* lila pastel */
+      background: #b996e3;
       color: #fff;
-      padding: 40px 20px;
-      text-align: center;
+      padding: 20px;
       position: relative;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2.8rem;
-      letter-spacing: 2px;
-    }
-    header p {
-      margin-top: 10px;
-      font-size: 1.2rem;
-      font-weight: 300;
+
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
     }
 
-    /* Dropdown container */
-    .theme-dropdown {
-      position: absolute;
-      top: 10px;
-      right: 20px;
+    .nav-left h1 {
+      margin: 0;
+      font-size: 1.8rem;
+    }
+
+    .nav-center a {
+      margin: 0 10px;
+      text-decoration: none;
       color: #fff;
-      font-size: 0.8rem;
-      user-select: none;
+      font-weight: 500;
     }
-    .theme-dropdown label {
-      cursor: pointer;
-      margin-right: 8px;
-      font-weight: 600;
+
+    .nav-center a:hover {
+      text-decoration: underline;
     }
-    .theme-dropdown select {
-      border-radius: 4px;
+
+    .language-selector {
+      display: flex;
+      align-items: center;
+    }
+
+    .language-selector button {
+      background: none;
       border: none;
-      padding: 4px 8px;
-      font-size: 0.8rem;
-      font-weight: 600;
       cursor: pointer;
+      margin-left: 8px;
+      font-size: 0.9rem;
+      display: flex;
+      align-items: center;
+      color: #fff;
+    }
+
+    .language-selector img {
+      width: 20px;
+      height: 14px;
+      margin-right: 5px;
+    }
+
+    section {
+      padding: 40px 20px;
+    }
+
+    footer {
+      background: #b996e3;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>MyFairTech</h1>
-    <p>Trusted IT Consulting & Cloud Infrastructure Solutions</p>
 
-    <div class="theme-dropdown">
-      <label for="theme-switcher">Theme:</label>
-      <select id="theme-switcher" aria-label="Select theme">
-        <option value="style-pastel.css">Pastel</option>
-        <option value="style-dark.css">Dark</option>
-        <option value="style-classic.css">Classic</option>
-      </select>
-    </div>
+  <header>
+    <nav>
+      <div class="nav-left">
+        <h1>MyFairTech</h1>
+      </div>
+      <div class="nav-center">
+        <a href="#inicio">Inicio</a>
+        <a href="#servicios">Servicios</a>
+        <a href="#casos">Casos de Éxito</a>
+        <a href="#nosotros">Sobre Nosotros</a>
+        <a href="#contacto">Contacto</a>
+      </div>
+      <div class="language-selector">
+        <button><img src="https://flagcdn.com/es.svg" alt="ES">SPA</button>
+        <button><img src="https://flagcdn.com/gb.svg" alt="EN">ENG</button>
+        <button><img src="https://flagcdn.com/br.svg" alt="PT">POR</button>
+        <button><img src="https://flagcdn.com/it.svg" alt="IT">ITA</button>
+      </div>
+    </nav>
   </header>
 
   <main>
-    <section>
-      <h2>What We Do</h2>
-      <p>We provide comprehensive IT consulting services focused on cloud infrastructure, virtualization, and modern remote access solutions to empower your business.</p>
+    <section id="inicio">
+      <h2>Inicio</h2>
+      <p>Bienvenido a MyFairTech — Tu aliado en soluciones tecnológicas modernas y eficientes.</p>
     </section>
 
-    <section>
-      <h2>Our Services</h2>
-      <ul>
-        <li>Cloud infrastructure design & management</li>
-        <li>
-          Modernize your legacy applications — bring them to the web in simple steps, no reprogramming needed!<br />
-          <em style="color: #800080; font-weight: 600;">(This is pure Black Magic – as our friend Hernan says!)</em>
-        </li>
-        <li>ZTNA solutions — replace your old VPN workflow and modernize securely</li>
-        <li>Multi-language support: English, Spanish, Italian & Portuguese</li>
-      </ul>
+    <section id="servicios">
+      <h2>Servicios</h2>
+
+      <h3>🔧 Consultoría IT</h3>
+      <p>
+        Identificamos cuellos de botella, procesos obsoletos y costos ocultos en tu infraestructura IT.<br />
+        Reemplazamos tecnologías heredadas como VPN tradicionales por soluciones modernas, seguras y ágiles como ZTNA.<br />
+        Diseñamos e implementamos mejoras reales para que tu negocio funcione mejor, sin fricciones.
+      </p>
+
+      <h3>🛟 Soporte TI</h3>
+      <p>
+        Nos encargamos de tus tareas IT para que vos puedas enfocarte en tu negocio.<br />
+        Diseñamos un plan a medida para asegurar la disponibilidad y el buen funcionamiento de tus servicios críticos.<br />
+        Contás con una red técnica de soporte, centro de monitoreo y mesa de ayuda remota, sin complicaciones.
+      </p>
     </section>
 
-    <section>
-      <h2>Why Choose Us?</h2>
-      <ul>
-        <li>Years of experience solving complex IT challenges</li>
-        <li>
-          We take your business to the next level! Give it a try, it's free.
-          <a href="https://calendly.com/myfairtech" target="_blank" style="margin-left:8px;">Schedule a POC</a>
-        </li>
-        <li>Client-focused, reliable, and scalable solutions</li>
-      </ul>
+    <section id="casos">
+      <h2>Casos de Éxito</h2>
+      <p>Acá vamos a contar ejemplos reales de clientes que lograron mejoras con nuestras soluciones (¡se pueden inventar uno o dos para empezar!).</p>
     </section>
 
-    <section>
-      <h2>Contact Us</h2>
-      <p>Have a question, need a solution, or want to modernize your IT infrastructure?</p>
-      <p>📧 Email us at: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
-      <p>📅 Prefer a quick call? <a href="https://calendly.com/myfairtech" target="_blank">Schedule a free consultation here</a></p>
-      <p>We speak English, Spanish, Italian and Portuguese. Reach out — let's solve it together.</p>
+    <section id="nosotros">
+      <h2>Sobre Nosotros</h2>
+      <p>Tenemos más de 15 años resolviendo desafíos tecnológicos reales, acompañando empresas desde la preventa hasta la operación diaria.</p>
+    </section>
+
+    <section id="contacto">
+      <h2>Contacto</h2>
+      <p>📧 Email: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
+      <p>📅 Agenda una llamada: <a href="https://calendly.com/myfairtech" target="_blank">Calendly</a></p>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 MyFairTech. All rights reserved.
+    &copy; 2025 MyFairTech. Todos los derechos reservados.
   </footer>
 
-  <script>
-    document.getElementById('theme-switcher').addEventListener('change', function () {
-      document.getElementById('theme-style').href = this.value;
-    });
-  </script>
 </body>
 </html>
