--- a/casos.html
+++ b/casos.html
@@ -7,7 +7,27 @@
   <link rel="stylesheet" href="style-pastel.css" />
 </head>
 <body>
-  <!-- HEADER -->
+  <header>
+  <nav>
+    <div class="nav-left">
+      <h1>MyFairTech</h1>
+    </div>
+    <div class="nav-center">
+      <a href="index.html">Inicio</a>
+      <a href="servicios.html">Servicios</a>
+      <a href="casos.html">Casos de Éxito</a>
+      <a href="nosotros.html">Sobre Nosotros</a>
+      <a href="contacto.html">Contacto</a>
+    </div>
+    <div class="language-selector">
+      <button><img src="https://flagcdn.com/es.svg" alt="ES">SPA</button>
+      <button><img src="https://flagcdn.com/gb.svg" alt="EN">ENG</button>
+      <button><img src="https://flagcdn.com/br.svg" alt="PT">POR</button>
+      <button><img src="https://flagcdn.com/it.svg" alt="IT">ITA</button>
+    </div>
+  </nav>
+</header>
+
 
   <main>
     <section>
