--- a/index.html
+++ b/index.html
@@ -4,112 +4,41 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MyFairTech - Inicio</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f4f7f8;
-      color: #222;
-      line-height: 1.6;
-    }
-
-    header {
-      background: #b996e3;
-      color: #fff;
-      padding: 20px;
-    }
-
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-
-    .nav-left h1 {
-      margin: 0;
-      font-size: 1.8rem;
-    }
-
-    .nav-center a {
-      margin: 0 10px;
-      text-decoration: none;
-      color: #fff;
-      font-weight: 500;
-    }
-
-    .nav-center a:hover {
-      text-decoration: underline;
-    }
-
-    .language-selector {
-      display: flex;
-      align-items: center;
-    }
-
-    .language-selector button {
-      background: none;
-      border: none;
-      cursor: pointer;
-      margin-left: 8px;
-      font-size: 0.9rem;
-      display: flex;
-      align-items: center;
-      color: #fff;
-    }
-
-    .language-selector img {
-      width: 20px;
-      height: 14px;
-      margin-right: 5px;
-    }
-
-    main {
-      padding: 40px 20px;
-    }
-
-    footer {
-      background: #b996e3;
-      color: #fff;
-      text-align: center;
-      padding: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="style-pastel.css" />
 </head>
 <body>
 
-  <header>
-    <nav>
-      <div class="nav-left">
-        <h1>MyFairTech</h1>
-      </div>
-      <div class="nav-center">
-        <a href="index.html">Inicio</a>
-        <a href="servicios.html">Servicios</a>
-        <a href="casos.html">Casos de Éxito</a>
-        <a href="nosotros.html">Sobre Nosotros</a>
-        <a href="contacto.html">Contacto</a>
-      </div>
-      <div class="language-selector">
-        <button><img src="https://flagcdn.com/es.svg" alt="ES">SPA</button>
-        <button><img src="https://flagcdn.com/gb.svg" alt="EN">ENG</button>
-        <button><img src="https://flagcdn.com/br.svg" alt="PT">POR</button>
-        <button><img src="https://flagcdn.com/it.svg" alt="IT">ITA</button>
-      </div>
-    </nav>
-  </header>
+<header>
+  <nav>
+    <div class="nav-left">
+      <h1>MyFairTech</h1>
+    </div>
+    <div class="nav-center">
+      <a href="index.html">Inicio</a>
+      <a href="servicios.html">Servicios</a>
+      <a href="casos.html">Casos de Éxito</a>
+      <a href="nosotros.html">Sobre Nosotros</a>
+      <a href="contacto.html">Contacto</a>
+    </div>
+    <div class="language-selector">
+      <button><img src="https://flagcdn.com/es.svg" alt="ES">SPA</button>
+      <button><img src="https://flagcdn.com/gb.svg" alt="EN">ENG</button>
+      <button><img src="https://flagcdn.com/br.svg" alt="PT">POR</button>
+      <button><img src="https://flagcdn.com/it.svg" alt="IT">ITA</button>
+    </div>
+  </nav>
+</header>
 
-  <main>
-    <section>
-      <h2>Bienvenido a MyFairTech</h2>
-      <p>Soluciones tecnológicas prácticas y a medida para tu empresa.</p>
-    </section>
-  </main>
+<main>
+  <section>
+    <h2>Bienvenido a MyFairTech</h2>
+    <p>Soluciones tecnológicas prácticas y a medida para tu empresa.</p>
+  </section>
+</main>
 
-  <footer>
-    &copy; 2025 MyFairTech. Todos los derechos reservados.
-  </footer>
+<footer>
+  &copy; 2025 MyFairTech. Todos los derechos reservados.
+</footer>
 
 </body>
 </html>
