--- a/casos-it.html
+++ b/casos-it.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="it">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,11 +13,11 @@
         <h1>MyFairTech</h1>
       </div>
       <div class="nav-center">
-        <a href="index.html">Inicio</a>
-        <a href="servicios.html">Servicios</a>
-        <a href="casos.html">Casos</a>
-        <a href="nosotros.html">Nosotros</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="index-it.html">Inicio</a>
+        <a href="servicios-it.html">Servicios</a>
+        <a href="casos-it.html">Casos</a>
+        <a href="nosotros-it.html">Nosotros</a>
+        <a href="contacto-it.html">Contacto</a>
       </div>
       <div class="language-selector">
         <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES" title="Español"></a>
@@ -29,7 +29,7 @@
   </header>
   <main>
     <section>
-      <h2>Contacto</h2>
+      <h2>Casi di Successo</h2>
       <p>Contenido de prueba para esta sección.</p>
     </section>
   </main>
