--- a/index.html
+++ b/index.html
@@ -1,120 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MyFairTech - Dynamic Theme Example</title>
-  <link id="theme-style" rel="stylesheet" href="style-pastel.css" />
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0; padding: 0;
-      background: #f4f7f8;
-      color: #222;
-      line-height: 1.6;
-    }
-    header {
-      background: #b996e3; /* lila pastel */
-      color: #fff;
-      padding: 40px 20px;
-      text-align: center;
-      position: relative;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.8rem;
-      letter-spacing: 2px;
-    }
-    header p {
-      margin-top: 10px;
-      font-size: 1.2rem;
-      font-weight: 300;
-    }
-
-    .theme-dropdown {
-      position: absolute;
-      top: 10px;
-      right: 20px;
-      color: #fff;
-      font-size: 0.8rem;
-      user-select: none;
-    }
-    .theme-dropdown label {
-      cursor: pointer;
-      margin-right: 8px;
-      font-weight: 600;
-    }
-    .theme-dropdown select {
-      border-radius: 4px;
-      border: none;
-      padding: 4px 8px;
-      font-size: 0.8rem;
-      font-weight: 600;
-      cursor: pointer;
-    }
-  </style>
+  <title>MyFairTech</title>
+  <link rel="stylesheet" href="style-pastel.css" />
 </head>
 <body>
   <header>
-    <h1>MyFairTech</h1>
-    <p>Trusted IT Consulting & Cloud Infrastructure Solutions</p>
-
-    <div class="theme-dropdown">
-      <label for="theme-switcher">Theme:</label>
-      <select id="theme-switcher" aria-label="Select theme">
-        <option value="style-pastel.css">Pastel</option>
-        <option value="style-dark.css">Dark</option>
-        <option value="style-classic.css">Classic</option>
-      </select>
-    </div>
+    <nav>
+      <div class="nav-left">
+        <h1>MyFairTech</h1>
+      </div>
+      <div class="nav-center">
+        <a href="index.html">Inicio</a>
+        <a href="servicios.html">Servicios</a>
+        <a href="casos.html">Casos</a>
+        <a href="nosotros.html">Nosotros</a>
+        <a href="contacto.html">Contacto</a>
+      </div>
+      <div class="language-selector">
+        <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES" title="Español"></a>
+        <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN" title="English"></a>
+        <a href="index-pt.html"><img src="https://flagcdn.com/br.svg" alt="PT" title="Português"></a>
+        <a href="index-it.html"><img src="https://flagcdn.com/it.svg" alt="IT" title="Italiano"></a>
+      </div>
+    </nav>
   </header>
-
   <main>
     <section>
-      <h2>What We Do</h2>
-      <p>We provide comprehensive IT consulting services focused on cloud infrastructure, virtualization, and modern remote access solutions to empower your business.</p>
-    </section>
-
-    <section>
-      <h2>Our Services</h2>
-      <ul>
-        <li>Cloud infrastructure design & management</li>
-        <li>
-          Modernize your legacy applications — bring them to the web in simple steps, no reprogramming needed!<br />
-        <li>ZTNA solutions — replace your old VPN workflow and modernize securely</li>
-        <li>Multi-language support: English, Spanish, Italian & Portuguese</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Why Choose Us?</h2>
-      <ul>
-        <li>Years of experience solving complex IT challenges</li>
-        <li>
-          We take your business to the next level! Give it a try, it's free.
-          <a href="https://calendly.com/myfairtech" target="_blank" style="margin-left:8px;">Schedule a POC</a>
-        </li>
-        <li>Client-focused, reliable, and scalable solutions</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Contact Us</h2>
-      <p>Have a question, need a solution, or want to modernize your IT infrastructure?</p>
-      <p>📧 Email us at: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
-      <p>📅 Prefer a quick call? <a href="https://calendly.com/myfairtech" target="_blank">Schedule a free consultation here</a></p>
-      <p>We speak English, Spanish, Italian and Portuguese. Reach out — let's solve it together.</p>
+      <h2>Bienvenido a MyFairTech</h2>
+      <p>Contenido de prueba para esta sección.</p>
     </section>
   </main>
-
   <footer>
-    &copy; 2025 MyFairTech. All rights reserved.
+    &copy; 2025 MyFairTech. Todos los derechos reservados.
   </footer>
-
-  <script>
-    document.getElementById('theme-switcher').addEventListener('change', function () {
-      document.getElementById('theme-style').href = this.value;
-    });
-  </script>
 </body>
 </html>
