--- a/servicios.html
+++ b/servicios.html
@@ -3,54 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MyFairTech - Servicios</title>
+  <title>MyFairTech</title>
   <link rel="stylesheet" href="style-pastel.css" />
 </head>
 <body>
-
-<header>
-  <nav>
-    <div class="nav-left">
-      <h1>MyFairTech</h1>
-    </div>
-    <div class="nav-center">
-      <a href="index.html">Inicio</a>
-      <a href="servicios.html">Servicios</a>
-      <a href="casos.html">Casos de Éxito</a>
-      <a href="nosotros.html">Sobre Nosotros</a>
-      <a href="contacto.html">Contacto</a>
-    </div>
-    <div class="language-selector">
-      <button><img src="https://flagcdn.com/es.svg" alt="ES">SPA</button>
-      <button><img src="https://flagcdn.com/gb.svg" alt="EN">ENG</button>
-      <button><img src="https://flagcdn.com/br.svg" alt="PT">POR</button>
-      <button><img src="https://flagcdn.com/it.svg" alt="IT">ITA</button>
-    </div>
-  </nav>
-</header>
-
-<main>
-  <section>
-    <h2>Servicios</h2>
-
-    <h3>🔧 Consultoría IT</h3>
-    <p>
-      Identificamos cuellos de botella, procesos obsoletos y costos ocultos en tu infraestructura IT.<br />
-      Reemplazamos tecnologías heredadas como VPN tradicionales por soluciones modernas como ZTNA.<br />
-      Diseñamos mejoras reales para que tu negocio funcione mejor.
-    </p>
-
-    <h3>🛟 Soporte TI</h3>
-    <p>
-      Nos encargamos de tus tareas IT para que vos puedas enfocarte en tu negocio.<br />
-      Plan a medida, disponibilidad garantizada, mesa de ayuda y soporte nacional.
-    </p>
-  </section>
-</main>
-
-<footer>
-  &copy; 2025 MyFairTech. Todos los derechos reservados.
-</footer>
-
+  <header>
+    <nav>
+      <div class="nav-left">
+        <h1>MyFairTech</h1>
+      </div>
+      <div class="nav-center">
+        <a href="index.html">Inicio</a>
+        <a href="servicios.html">Servicios</a>
+        <a href="casos.html">Casos</a>
+        <a href="nosotros.html">Nosotros</a>
+        <a href="contacto.html">Contacto</a>
+      </div>
+      <div class="language-selector">
+        <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES" title="Español"></a>
+        <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN" title="English"></a>
+        <a href="index-pt.html"><img src="https://flagcdn.com/br.svg" alt="PT" title="Português"></a>
+        <a href="index-it.html"><img src="https://flagcdn.com/it.svg" alt="IT" title="Italiano"></a>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <h2>Nuestros Servicios</h2>
+      <p>Contenido de prueba para esta sección.</p>
+    </section>
+  </main>
+  <footer>
+    &copy; 2025 MyFairTech. Todos los derechos reservados.
+  </footer>
 </body>
 </html>
