--- a/nosotros-en.html
+++ b/nosotros-en.html
@@ -13,11 +13,11 @@
         <h1>MyFairTech</h1>
       </div>
       <div class="nav-center">
-        <a href="index-en.html">Inicio</a>
-        <a href="servicios-en.html">Servicios</a>
-        <a href="casos-en.html">Casos</a>
-        <a href="nosotros-en.html">Nosotros</a>
-        <a href="contacto-en.html">Contacto</a>
+      <a href="index-en.html">Home</a>
+<a href="servicios-en.html">Services</a>
+<a href="casos-en.html">Cases</a>
+<a href="nosotros-en.html">About</a>
+<a href="contacto-en.html">Contact</a>
       </div>
       <div class="language-selector">
         <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES" title="Español"></a>
