--- a/index-en.html
+++ b/index-en.html
@@ -1,19 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MyFairTech</title>
   <link rel="stylesheet" href="style-pastel.css" />
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0; padding: 0;
+      background: #f4f7f8;
+      color: #222;
+      line-height: 1.6;
+    }
+    header {
+      background: #b996e3;
+      color: #fff;
+      padding: 20px;
+    }
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+    .nav-left h1 {
+      margin: 0;
+      font-size: 1.8rem;
+    }
+    .nav-center a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #fff;
+      font-weight: 500;
+    }
+    .nav-center a:hover {
+      text-decoration: underline;
+    }
+    .language-selector a img {
+      width: 22px;
+      height: 15px;
+      margin-left: 8px;
+      border-radius: 3px;
+    }
+    main {
+      padding: 40px 20px;
+    }
+    footer {
+      background: #b996e3;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+    }
+  </style>
 </head>
 <body>
+
   <header>
     <nav>
       <div class="nav-left">
         <h1>MyFairTech</h1>
       </div>
       <div class="nav-center">
-       <a href="index-en.html">Home</a>
+        <a href="index-en.html">Home</a>
 <a href="servicios-en.html">Services</a>
 <a href="casos-en.html">Cases</a>
 <a href="nosotros-en.html">About</a>
@@ -27,14 +76,48 @@
       </div>
     </nav>
   </header>
+
   <main>
     <section>
-      <h2>Welcome to MyFairTech</h2>
-      <p>Contenido de prueba para esta sección.</p>
+      <h2>What We Do</h2>
+      <p>We provide comprehensive IT consulting services focused on cloud infrastructure, virtualization, and modern remote access solutions to empower your business.</p>
+    </section>
+
+    <section>
+      <h2>Our Services</h2>
+      <ul>
+        <li>Cloud infrastructure design & management</li>
+        <li>
+          Modernize your legacy applications — bring them to the web in simple steps, no reprogramming needed!<br />
+        <li>ZTNA solutions — replace your old VPN workflow and modernize securely</li>
+        <li>Multi-language support: English, Spanish, Italian & Portuguese</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Why Choose Us?</h2>
+      <ul>
+        <li>Years of experience solving complex IT challenges</li>
+        <li>
+          We take your business to the next level! Give it a try, it's free.
+          <a href="https://calendly.com/myfairtech" target="_blank" style="margin-left:8px;">Schedule a POC</a>
+        </li>
+        <li>Client-focused, reliable, and scalable solutions</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Contact Us</h2>
+      <p>Have a question, need a solution, or want to modernize your IT infrastructure?</p>
+      <p>📧 Email us at: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
+      <p>📅 Prefer a quick call? <a href="https://calendly.com/myfairtech" target="_blank">Schedule a free consultation here</a></p>
+      <p>We speak English, Spanish, Italian and Portuguese. Reach out — let's solve it together.</p>
     </section>
   </main>
+
   <footer>
     &copy; 2025 MyFairTech. Todos los derechos reservados.
   </footer>
+
 </body>
 </html>
