--- a/nosotros-pt.html
+++ b/nosotros-pt.html
@@ -13,11 +13,11 @@
         <h1>MyFairTech</h1>
       </div>
       <div class="nav-center">
-        <a href="index-pt.html">Inicio</a>
-        <a href="servicios-pt.html">Servicios</a>
-        <a href="casos-pt.html">Casos</a>
-        <a href="nosotros-pt.html">Nosotros</a>
-        <a href="contacto-pt.html">Contacto</a>
+ <a href="index-pt.html">Início</a>
+<a href="servicios-pt.html">Serviços</a>
+<a href="casos-pt.html">Casos</a>
+<a href="nosotros-pt.html">Sobre</a>
+<a href="contacto-pt.html">Contato</a>
       </div>
       <div class="language-selector">
         <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES" title="Español"></a>
