--- a/index-pt.html
+++ b/index-pt.html
@@ -5,36 +5,117 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MyFairTech</title>
   <link rel="stylesheet" href="style-pastel.css" />
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0; padding: 0;
+      background: #f4f7f8;
+      color: #222;
+      line-height: 1.6;
+    }
+    header {
+      background: #b996e3;
+      color: #fff;
+      padding: 20px;
+    }
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+    .nav-left h1 {
+      margin: 0;
+      font-size: 1.8rem;
+    }
+    .nav-center a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #fff;
+      font-weight: 500;
+    }
+    .nav-center a:hover {
+      text-decoration: underline;
+    }
+    .language-selector a img {
+      width: 22px;
+      height: 15px;
+      margin-left: 8px;
+      border-radius: 3px;
+    }
+    main {
+      padding: 40px 20px;
+    }
+    footer {
+      background: #b996e3;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+    }
+  </style>
 </head>
 <body>
+
   <header>
     <nav>
       <div class="nav-left">
         <h1>MyFairTech</h1>
       </div>
       <div class="nav-center">
-        <a href="index-pt.html">Inicio</a>
-        <a href="servicios-pt.html">Servicios</a>
+        <a href="index-pt.html">Início</a>
+        <a href="servicios-pt.html">Serviços</a>
         <a href="casos-pt.html">Casos</a>
-        <a href="nosotros-pt.html">Nosotros</a>
-        <a href="contacto-pt.html">Contacto</a>
+        <a href="nosotros-pt.html">Sobre</a>
+        <a href="contacto-pt.html">Contato</a>
       </div>
       <div class="language-selector">
-        <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES" title="Español"></a>
-        <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN" title="English"></a>
+        <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES" title="Espanhol"></a>
+        <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN" title="Inglês"></a>
         <a href="index-pt.html"><img src="https://flagcdn.com/br.svg" alt="PT" title="Português"></a>
         <a href="index-it.html"><img src="https://flagcdn.com/it.svg" alt="IT" title="Italiano"></a>
       </div>
     </nav>
   </header>
+
   <main>
     <section>
-      <h2>Bem-vindo à MyFairTech</h2>
-      <p>Contenido de prueba para esta sección.</p>
+      <h2>O que fazemos</h2>
+      <p>Oferecemos serviços completos de consultoria de TI focados em infraestrutura de nuvem, virtualização e soluções modernas de acesso remoto para potencializar o seu negócio.</p>
+    </section>
+
+    <section>
+      <h2>Nossos Serviços</h2>
+      <ul>
+        <li>Design e gerenciamento de infraestrutura em nuvem</li>
+        <li>Modernização de aplicações legadas — traga-as para a web em poucos passos, sem necessidade de reprogramação!</li>
+        <li>Soluções ZTNA — substitua sua VPN antiga e modernize com segurança</li>
+        <li>Suporte multilíngue: Inglês, Espanhol, Italiano e Português</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Por que nos escolher?</h2>
+      <ul>
+        <li>Anos de experiência resolvendo desafios complexos de TI</li>
+        <li>Levamos seu negócio para o próximo nível! Experimente gratuitamente.
+          <a href="https://calendly.com/myfairtech" target="_blank" style="margin-left:8px;">Agendar uma demonstração</a>
+        </li>
+        <li>Soluções confiáveis, escaláveis e centradas no cliente</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Fale Conosco</h2>
+      <p>Tem alguma dúvida, precisa de uma solução ou quer modernizar sua infraestrutura de TI?</p>
+      <p>📧 Escreva para: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
+      <p>📅 Prefere uma chamada rápida? <a href="https://calendly.com/myfairtech" target="_blank">Agende uma consulta gratuita aqui</a></p>
+      <p>Falamos Inglês, Espanhol, Italiano e Português. Entre em contato — vamos resolver juntos.</p>
     </section>
   </main>
+
   <footer>
-    &copy; 2025 MyFairTech. Todos los derechos reservados.
+    &copy; 2025 MyFairTech. Todos os direitos reservados.
   </footer>
+
 </body>
 </html>
