--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       </div>
       <div class="language-selector">
         <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES" title="Español"></a>
-        <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN" title="English"></a>
-        <a href="index-pt.html"><img src="https://flagcdn.com/br.svg" alt="PT" title="Português"></a>
+        <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN" title="Inglés"></a>
+        <a href="index-pt.html"><img src="https://flagcdn.com/br.svg" alt="PT" title="Portugués"></a>
         <a href="index-it.html"><img src="https://flagcdn.com/it.svg" alt="IT" title="Italiano"></a>
       </div>
     </nav>
@@ -79,39 +79,37 @@
 
   <main>
     <section>
-      <h2>What We Do</h2>
-      <p>We provide comprehensive IT consulting services focused on cloud infrastructure, virtualization, and modern remote access solutions to empower your business.</p>
+      <h2>Qué hacemos</h2>
+      <p>Ofrecemos servicios completos de consultoría TI enfocados en infraestructura en la nube, virtualización y soluciones modernas de acceso remoto para potenciar tu negocio.</p>
     </section>
 
     <section>
-      <h2>Our Services</h2>
+      <h2>Nuestros Servicios</h2>
       <ul>
-        <li>Cloud infrastructure design & management</li>
-        <li>
-          Modernize your legacy applications — bring them to the web in simple steps, no reprogramming needed!<br />
-        <li>ZTNA solutions — replace your old VPN workflow and modernize securely</li>
-        <li>Multi-language support: English, Spanish, Italian & Portuguese</li>
+        <li>Diseño y gestión de infraestructura en la nube</li>
+        <li>Modernización de aplicaciones legadas — llévalas a la web en simples pasos, ¡sin necesidad de reprogramar!</li>
+        <li>Solucciones ZTNA — reemplaza tu antigua VPN y moderniza con seguridad</li>
+        <li>Soporte multilingüe: Inglés, Español, Italiano y Portugués</li>
       </ul>
     </section>
 
     <section>
-      <h2>Why Choose Us?</h2>
+      <h2>Por qué elegirnos</h2>
       <ul>
-        <li>Years of experience solving complex IT challenges</li>
-        <li>
-          We take your business to the next level! Give it a try, it's free.
-          <a href="https://calendly.com/myfairtech" target="_blank" style="margin-left:8px;">Schedule a POC</a>
+        <li>Años de experiencia resolviendo desafíos complejos de TI</li>
+        <li>Llevamos tu negocio al siguiente nivel. ¡Pruébalo gratis!
+          <a href="https://calendly.com/myfairtech" target="_blank" style="margin-left:8px;">Agenda una prueba</a>
         </li>
-        <li>Client-focused, reliable, and scalable solutions</li>
+        <li>Soluciones confiables, escalables y centradas en el cliente</li>
       </ul>
     </section>
 
     <section>
-      <h2>Contact Us</h2>
-      <p>Have a question, need a solution, or want to modernize your IT infrastructure?</p>
-      <p>📧 Email us at: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
-      <p>📅 Prefer a quick call? <a href="https://calendly.com/myfairtech" target="_blank">Schedule a free consultation here</a></p>
-      <p>We speak English, Spanish, Italian and Portuguese. Reach out — let's solve it together.</p>
+      <h2>Contáctanos</h2>
+      <p>¿Tienes alguna pregunta, necesitas una solución o quieres modernizar tu infraestructura TI?</p>
+      <p>📧 Escríbenos a: <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
+      <p>📅 ¿Prefieres una llamada rápida? <a href="https://calendly.com/myfairtech" target="_blank">Agenda una consulta gratuita aquí</a></p>
+      <p>Hablamos Inglés, Español, Italiano y Portugués. Contáctanos — resolvamos juntos.</p>
     </section>
   </main>
 
